Fix for compilation on Java 8 and older Junit versions